# flowforge-windows

./: CMakeLists.txt  build.bat
CLI/: CMakeLists.txt
CLI/Client/: CMakeLists.txt  Client.cpp
Core/: CMakeLists.txt  Config.cpp  Config.hpp  Logger.cpp  Logger.hpp  Plugin.hpp  PluginWrapper.cpp  PluginWrapper.hpp  TUN.cpp  TUN.hpp
Core/Client/: CMakeLists.txt  Client.cpp  Client.hpp  DNS.cpp  DNS.hpp  FirewallRules.cpp  FirewallRules.hpp  NetWatcher.cpp  NetWatcher.hpp  Network.cpp  Network.hpp  NetworkRollback.cpp  NetworkRollback.hpp
